# dotfiles

./: .gitignore  .gitmodules  Cargo.toml  README.md  dot  dot.old  gitconfig.ln  gtkrc-2.0.ln  inputrc.ln  install  install.bat  install.sh  minttyrc.ln  npmrc.ln  rustup  shell.nix
scripts/: Cargo.toml  arch-package.list  dotinit  install.sh  linkIdea.bat
scripts/admin/: package-installation
scripts/core/: core  core-commands  system-info
scripts/deprecated/: win-vm.zsh
scripts/install/: _functions  diff-so-fancy  fzf  hub  package-installation  tmux  toast  wslpath
scripts/setup/: folder-structure  link
scripts/setup/arch/: packages
scripts/src/: al.zsh  bar-toggle.zsh  lib.rs  rename-tmux-time.zsh
scripts/src/audio/: add-music.zsh
scripts/src/backup/: backup-all.zsh  backup.zsh  restore.zsh  sync-keepass.zsh  sync-music-android.zsh
scripts/src/link/: dotcompare.zsh  dotlink.zsh  dotunlink.zsh  link-vivaldi-style.zsh
scripts/src/media/: music.zsh  play.zsh  screencap.bash
scripts/src/nix/: s.rs  web.rs
scripts/src/shared/: command.rs  mod.rs
scripts/src/util/: clipboard-rotate.zsh  get-window-criteria.sh  ide-term.zsh  rename-photographs-datetime.zsh
scripts/src/work/: dmm-locale.zsh  dmm-move-locale.zsh
scripts/src/workflow/: antimicrox-gamepad.sh  better-discord.zsh  connect-grandma.sh  git-explore.zsh  git-split.zsh  study-notes-edit.zsh  update.zsh  wiki.zsh
scripts/ubuntu/: install-tmux.sh
scripts/windows/: link-intellij.bat
scripts/windows/reg/: general-tweaks.enable.reg  open-with-vim.enable.reg  remove-desktop-ini.enable.reg  (+7 more)
(+312 files in other folders)
