[package]
name = "scripts"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
indoc = "2"
clap = { version = "4.5", features = ["cargo"] }
subprocess = "0.2.9"
chrono = "0.4.38"
tap = "1.0"
walkdir = "2.5"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
path = "./src/nix/s.rs"
name = "s"

[[bin]]
path = "./src/nix/web.rs"
name = "web"
